[package]
name = "GameDemo"
version = "0.1.0"
edition = "2021"

[dependencies]
winit = {version = "0.29", features = ["rwh_05"]}
env_logger = "0.11.5"
log = "0.4.22"
wgpu = "22.1.0"
pollster = "0.3"
bytemuck = {version = "1.18.0", features = ["derive"]}
image = {version = "0.25.2", default-features = false, features = ["png", "jpeg"]}
anyhow = "1.0.89"
cgmath = "0.18.0"
tobj = {version = "4.0.2", default-features = false, features = ["async"]}
cfg-if = "1.0.0"
instant = "0.1.13"
reqwest = "0.12.8"
web-sys = "0.3.70"

[target.'cfg(target_arch = "wasm32")'.dependencies]
instant = { version = "0.1.13", features = [ "wasm-bindgen" ] }

[build-dependencies]
anyhow = "1.0.89"
fs_extra = "1.3.0"
glob = "0.3.1"